--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   english_words: ^4.0.0
+  firebase_database: ^9.0.9
+  firebase_core: ^1.14.0
 
 dev_dependencies:
   flutter_test:
