--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -37,6 +38,9 @@ dependencies:
   english_words: ^4.0.0
   firebase_database: ^9.0.9
   firebase_core: ^1.14.0
+  flutterfire_cli: ^0.1.3
+  flutter_easyloading: ^3.0.3
+  http_services: ^2.1.1
 
 dev_dependencies:
   flutter_test:
